modified whole structure of project

--- a/allauthdemo/templates/bases/bootstrap-member.html
+++ b/allauthdemo/templates/bases/bootstrap-member.html
@@ -12,6 +12,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+          <a class="navbar-brand" href="/problem-list">Problem List</a>
           <a class="navbar-brand" href="{% url 'user_home' %}">Account Page</a>
         </div>
         <div class="navbar-collapse collapse">
