--- a/allauthdemo/templates/bases/problem-list.html
+++ b/allauthdemo/templates/bases/problem-list.html
@@ -1,8 +1,8 @@
-{% extends "bases/bootstrap-minimal.html" %}
+{% extends user.is_authenticated|yesno:"bases/bootstrap-member.html,bases/bootstrap-minimal.html" %}
+
 {% load staticfiles %}
 
 {% block content %}
-
 
 <div class="container">
 	{% if problems_retrieved %}
