added handler for correct submissions. next-step limit uploaded file size

--- a/fileupload/templates/fileupload/submission_basic_form.html
+++ b/fileupload/templates/fileupload/submission_basic_form.html
@@ -69,35 +69,40 @@ function csrfSafeMethod(method) {
     // these HTTP methods do not require CSRF protection
     return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
 }
+
 $(function () {
     'use strict';
     // Change this to the location of your server-side upload handler:
-    var url = '/upload/basic/'
     var csrftoken = $.cookie('csrftoken');
-
-    $('#fileupload').fileupload({
-        url: url + '?problem_pk=' + $('#form_task option:selected').val(),
-        crossDomain: false,
-        beforeSend: function(xhr, settings) {
-            if (!csrfSafeMethod(settings.type)) {
-                xhr.setRequestHeader("X-CSRFToken", csrftoken);
+    $('#form_task').bind("click", function(){
+        var url0 = '/upload/basic/' + '?problem_pk=' + $('#form_task option:selected').val();
+        $('#fileupload').fileupload({
+            url: url0,
+            crossDomain: false,
+            beforeSend: function(xhr, settings) {
+                if (!csrfSafeMethod(settings.type)) {
+                    xhr.setRequestHeader("X-CSRFToken", csrftoken);
+                }
+                return true;
+            },
+            dataType: 'json',
+            done: function (e, data) {
+                $.each(data.result.files, function (index, file) {
+                    $('<p/>').text(file.name).appendTo('#files');
+                });
+            },
+            progressall: function (e, data) {
+                var progress = parseInt(data.loaded / data.total * 100, 10);
+                $('#progress .progress-bar').css(
+                    'width',
+                    progress + '%'
+                );
             }
-        },
-        dataType: 'json',
-        done: function (e, data) {
-            $.each(data.result.files, function (index, file) {
-                $('<p/>').text(file.name).appendTo('#files');
-            });
-        },
-        progressall: function (e, data) {
-            var progress = parseInt(data.loaded / data.total * 100, 10);
-            $('#progress .progress-bar').css(
-                'width',
-                progress + '%'
-            );
-        }
-    }).prop('disabled', !$.support.fileInput)
-        .parent().addClass($.support.fileInput ? undefined : 'disabled');
+        }).prop('disabled', !$.support.fileInput)
+            .parent().addClass($.support.fileInput ? undefined : 'disabled');
+    });
+    $('#form_task').trigger('click');
+    
 });
 </script>
 {% endblock %}
