Add submission list view #17

--- a/allauthdemo/templates/bases/bootstrap-minimal.html
+++ b/allauthdemo/templates/bases/bootstrap-minimal.html
@@ -13,6 +13,7 @@
             <span class="icon-bar"></span>
         </button>
           <a class="navbar-brand" href="/problem-list">Problem List</a>
+          <a class="navbar-brand" href="/submission-list">Submission List</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
