--- a/allauthdemo/templates/bases/bootstrap-member.html
+++ b/allauthdemo/templates/bases/bootstrap-member.html
@@ -13,6 +13,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="/problem-list">Problem List</a>
+          <a class="navbar-brand" href="/submission-list">Submission List</a>
           <a class="navbar-brand" href="{% url 'user_home' %}">Account Page</a>
         </div>
         <div class="navbar-collapse collapse">
