Add maxFileSize in jQuery #10

--- a/fileupload/templates/fileupload/submission_basic_form.html
+++ b/fileupload/templates/fileupload/submission_basic_form.html
@@ -60,6 +60,7 @@ $(function () {
         $('#fileupload').fileupload({
             url: '/upload/basic/',
             crossDomain: false,
+            maxFileSize: 10240000, // 10MB
             formData: {
                 problem_pk: $('#form_task option:selected').val(),
             },
