Add other fields #18

--- a/allauthdemo/templates/auth/profile.html
+++ b/allauthdemo/templates/auth/profile.html
@@ -33,6 +33,7 @@
     </div>
 -->
   </form>
+  <h4>Vă rugăm să treceți cu atenție punctajele la FMI No Stress și CSAcademy că mai apoi ele vor fi verficate de noi.</h4>
 </div>
 
 </div>
