--- a/allauthdemo/templates/bases/submission-list.html
+++ b/allauthdemo/templates/bases/submission-list.html
@@ -13,7 +13,8 @@
             <tr>
                 <th> Date </th>
                 <th> Problem </th>
-                <th> Url </th>
+                <th> Sursa </th>
+                <th> URL verificare </th>
             </tr>
         </thead>
         <tbody>
@@ -22,6 +23,13 @@
           <td>{{submission.last_modified}}</td>
           <td>{{submission.problem.name}}</td>
           <td><a href="/media/{{submission.file.url}}">URL</a></td>
+          <td>
+            {% if submission.url %}
+            <a href="{{ submission.url }}">URL</a>
+            {% else %}
+            N/A
+            {% endif %}
+          </td>
         </tr>
         {% endfor %}
         <tbody>
