Clean homepage and footer #19

--- a/allauthdemo/templates/bases/bootstrap.html
+++ b/allauthdemo/templates/bases/bootstrap.html
@@ -32,10 +32,8 @@
   <hr>
   <footer>
     <ul class="list-inline pull-right">
-      <li><a href="{% url 'website_terms' %}">Terms</a></li>
-      <li><a href="{% url 'website_contact' %}">Contact</a></li>
+      <li><a href="https://www.facebook.com/groups/271299146330636/">Facebook group</a></li>
     </ul>
-    <p class=muted>{% include "copyright.html" %}</p>
   </footer>
 </div>
 {% endblock %}
