Palantir motto on front page

--- a/allauthdemo/templates/visitor/landing-index.html
+++ b/allauthdemo/templates/visitor/landing-index.html
@@ -7,7 +7,7 @@
   <div class="jumbotron text-center">
     <h1>InfoClock Website</h1>
     <p class="lead">
-      Read more on the <a href="{% url 'landing_about' %}">About Page.</a>
+      <p>Save the shire!</p>
     </p>
     <p>
       <a class="btn btn-lg btn-success " href="{% url 'account_signup' %}" role="button">Join</a>
