Add big message about completing profile

--- a/allauthdemo/templates/member/member-index.html
+++ b/allauthdemo/templates/member/member-index.html
@@ -24,6 +24,7 @@
         <li>Email: <strong>{{user.email}}</strong></li>
       </ul>
       <a href="{% url 'account_profile' %}">Edit</a>
+      <h2>If you do not fully complete your profile, you do not get any grades!</h2>
     </div>
   </div>
 </div>
