Add total to ranking

--- a/allauthdemo/templates/bases/ranking-list.html
+++ b/allauthdemo/templates/bases/ranking-list.html
@@ -15,6 +15,7 @@
                 <th> Codeforces </th>
                 <th> No Stress </th>
                 <th> CSAcademy </th>
+                <th> Total </th>
                 <th> Max Points </th>
                 <th> Grade </th>
             </tr>
@@ -27,6 +28,7 @@
           <td>{{user.codeforces_points}}</td>
           <td>{{user.no_stress}}</td>
           <td>{{user.csacademy}}</td>
+          <td>{{user.total}}</td>
           <td>{{user.max_points}}</td>
           <td>{{user.nota}}</td>
         </tr>
