--- a/allauthdemo/templates/bases/ranking-list.html
+++ b/allauthdemo/templates/bases/ranking-list.html
@@ -16,6 +16,7 @@
                 <th> Codeforces </th>
                 <th> No Stress </th>
                 <th> CSAcademy </th>
+                <th> ACM Regional </th>
                 <th> Total </th>
                 <th> Max Points </th>
                 <th> Grade </th>
@@ -31,6 +32,7 @@
           <td>{{user.codeforces_points}}</td>
           <td>{{user.no_stress}}</td>
           <td>{{user.csacademy}}</td>
+          <td>{{user.score_extra}}</td>
           <td>{{user.total}}</td>
           <td>{{user.max_points}}</td>
           <td>{{user.nota}}</td>
