Add fraud field

--- a/allauthdemo/templates/bases/ranking-list.html
+++ b/allauthdemo/templates/bases/ranking-list.html
@@ -17,6 +17,7 @@
                 <th> No Stress </th>
                 <th> CSAcademy </th>
                 <th> ACM Regional </th>
+                <th> Fraud </th>
                 <th> Total </th>
                 <th> Max Points </th>
                 <th> Grade </th>
@@ -33,6 +34,7 @@
           <td>{{user.no_stress}}</td>
           <td>{{user.csacademy}}</td>
           <td>{{user.score_extra}}</td>
+          <td>{{user.score_minus}}</td>
           <td>{{user.total}}</td>
           <td>{{user.max_points}}</td>
           <td>{{user.nota}}</td>
