--- a/allauthdemo/templates/bases/ranking-list.html
+++ b/allauthdemo/templates/bases/ranking-list.html
@@ -5,8 +5,10 @@
 {% block content %}
 
 <div class="container">
+  <ul>
+    <li>11.05 - Am pus Codeforces #352</li>
+  </ul>
   <h1>Ranking</h1>
-
    <div class="table-responsive">
       <table class="table table-bordered table-striped">
         <thead>
