--- a/allauthdemo/templates/bases/ranking-list.html
+++ b/allauthdemo/templates/bases/ranking-list.html
@@ -6,8 +6,22 @@
 
 <div class="container">
   <ul>
-    <li>11.05 - Am pus Codeforces #352</li>
+    <li>
+    <li>11.05.2016 - Am pus Codeforces #352</li>
   </ul>
+  <p>Concursurile la care puteati participa. Punctajul minim pentru nota 10 e numarul de concursuri inmultit cu 3 puncte.</p>
+  <ol>
+    <li>VK Cup 2016 - Round 1</li>
+    <li>Codeforces Round #346</li>
+    <li>Educational Codeforces Round 11</li>
+    <li>Codeforces Round #347</li>
+    <li>Educational Codeforces Round 12 </li>
+    <li>Codeforces Round #348</li>
+    <li>Codeforces Round #349</li>
+    <li>Codeforces Round #350</li>
+    <li>Codeforces Round #351</li>
+    <li>Codeforces Round #352</li>
+  </ol>
   <h1>Ranking</h1>
    <div class="table-responsive">
       <table class="table table-bordered table-striped">
