Update quote cc @rdragos

--- a/allauthdemo/templates/visitor/landing-index.html
+++ b/allauthdemo/templates/visitor/landing-index.html
@@ -7,7 +7,7 @@
   <div class="jumbotron text-center">
     <h1>InfoClock Website</h1>
     <p class="lead">
-      <p>Save the shire!</p>
+      <p>“All we have to decide is what to do with the time that is given us.” - Gandalf, Lord of The Rings</p>
     </p>
     <p>
       <a class="btn btn-lg btn-success " href="{% url 'account_signup' %}" role="button">Join</a>
