--- a/allauthdemo/templates/visitor/landing-index.html
+++ b/allauthdemo/templates/visitor/landing-index.html
@@ -13,6 +13,8 @@
       <a class="btn btn-lg btn-success " href="{% url 'account_signup' %}" role="button">Join</a>
       or
       <a class="btn btn-lg btn-success " href="{% url 'account_login' %}" role="button">Log In</a>
+      or
+      <a class="btn btn-lg btn-success " href="/ranking" role="button">Rankings</a>
     </p>
   </div>
 </div>
