Update next cdf

--- a/allauthdemo/templates/bases/ranking-list.html
+++ b/allauthdemo/templates/bases/ranking-list.html
@@ -7,6 +7,7 @@
 <div class="container">
   <ul>
     <li>11.05.2016 - Am pus Codeforces #352</li>
+    <li>16.05.2016 - Am pus Codeforces #353</li>
   </ul>
   <p>Concursurile la care puteati participa. Punctajul minim pentru nota 10 e numarul de concursuri inmultit cu 3 puncte.</p>
   <ol>
