Update list of contests

--- a/allauthdemo/templates/bases/ranking-list.html
+++ b/allauthdemo/templates/bases/ranking-list.html
@@ -21,6 +21,7 @@
     <li>Codeforces Round #350</li>
     <li>Codeforces Round #351</li>
     <li>Codeforces Round #352</li>
+    <li>Codeforces Round #353</li>
   </ol>
   <h1>Ranking</h1>
    <div class="table-responsive">
