Add new contest

--- a/allauthdemo/templates/bases/ranking-list.html
+++ b/allauthdemo/templates/bases/ranking-list.html
@@ -8,6 +8,7 @@
   <ul>
     <li>11.05.2016 - Am pus Codeforces #352</li>
     <li>16.05.2016 - Am pus Codeforces #353</li>
+    <li>26.05.2016 - Am pus Codeforces #354</li>
   </ul>
   <p>Concursurile la care puteati participa. Punctajul minim pentru nota 10 e numarul de concursuri inmultit cu 3 puncte.</p>
   <ol>
@@ -22,6 +23,7 @@
     <li>Codeforces Round #351</li>
     <li>Codeforces Round #352</li>
     <li>Codeforces Round #353</li>
+    <li>Codeforces Round #354</li>
   </ol>
   <h1>Ranking</h1>
    <div class="table-responsive">
