--- a/allauthdemo/templates/bases/ranking-list.html
+++ b/allauthdemo/templates/bases/ranking-list.html
@@ -47,7 +47,7 @@
           <td>{{user.codeforces_points}}</td>
           <td>{{minimum}}</td>
           <td>{{user.nota}}</td>
-          <td><a href="http://codeforces.com/profile/{{{{user.codeforces_handle}}}}">{{user.codeforces_handle}}</a></td>
+          <td><a href="http://codeforces.com/profile/{{user.codeforces_handle}}">{{user.codeforces_handle}}</a></td>
           <td><a href="/admin/allauthdemo_auth/demouser/{{user.id}}">Edit...</a></td>
         </tr>
         {% endfor %}
