--- a/allauthdemo/templates/bases/ranking-list.html
+++ b/allauthdemo/templates/bases/ranking-list.html
@@ -9,6 +9,8 @@
     <li>11.05.2016 - Am pus Codeforces #352</li>
     <li>16.05.2016 - Am pus Codeforces #353</li>
     <li>26.05.2016 - Am pus Codeforces #354</li>
+    <li>27.05.2016 - Am pus concursurile de Div2 unde Denis Mita a participat ca neoficial pentru ca e Div1.</li>
+    <li>27.05.2016 - Am dat primul examen onsite. Valentin Harsan a participat cu ID-ul AkashiSeijuro.</li>
   </ul>
   <p>Concursurile la care puteati participa. Punctajul minim pentru nota 10 e numarul de concursuri inmultit cu 3 puncte.</p>
   <ol>
