--- a/allauthdemo/templates/bases/ranking-list.html
+++ b/allauthdemo/templates/bases/ranking-list.html
@@ -10,7 +10,7 @@
     <li>16.05.2016 - Am pus Codeforces #353</li>
     <li>26.05.2016 - Am pus Codeforces #354</li>
     <li>27.05.2016 - Am pus concursurile de Div2 unde Denis Mita a participat ca neoficial pentru ca e Div1.</li>
-    <li>27.05.2016 - Am dat primul examen onsite. Valentin Harsan a participat cu ID-ul AkashiSeijuro.</li>
+    <li>27.05.2016 - <a href="http://codeforces.com/group/CJYYWxOetD/contest/207342/standings/groupmates/true/page/1">Am dat primul examen onsite</a>. Valentin Harsan a participat cu ID-ul AkashiSeijuro.</li>
   </ul>
   <p>Concursurile la care puteati participa. Punctajul minim pentru nota 10 e numarul de concursuri inmultit cu 3 puncte.</p>
   <ol>
@@ -46,7 +46,7 @@
             </tr>
         </thead>
         <tbody>
-        {% for user in users %}
+        {% for user in users %}h
         <tr>
           <td>{{forloop.counter}}</td>
           <td class="col-md-3"><a href="/participant/{{user.id}}">{{user.name}}</a></td>
