Update final grades

--- a/allauthdemo/templates/bases/ranking-list.html
+++ b/allauthdemo/templates/bases/ranking-list.html
@@ -56,8 +56,8 @@
           <td>{{user.codeforces_grade}}</td>
           <td>{{user.1st}}</td>
           <td>{{user.2nd}}</td>
-          <td>N/A</td>
-          <td>N/A</td>
+          <td>{{user.exam_grade}}</td>
+          <td>{{user.final_grade}}</td>
           <td><a href="/admin/allauthdemo_auth/demouser/{{user.id}}">Edit...</a></td>
         </tr>
         {% endfor %}
