--- a/allauthdemo/templates/bases/ranking-list.html
+++ b/allauthdemo/templates/bases/ranking-list.html
@@ -46,7 +46,7 @@
             </tr>
         </thead>
         <tbody>
-        {% for user in users %}h
+        {% for user in users %}
         <tr>
           <td>{{forloop.counter}}</td>
           <td class="col-md-3"><a href="/participant/{{user.id}}">{{user.name}}</a></td>
