--- a/allauthdemo/templates/bases/ranking-list.html
+++ b/allauthdemo/templates/bases/ranking-list.html
@@ -9,6 +9,7 @@
     <li>11.05.2016 - Am pus Codeforces #352</li>
     <li>16.05.2016 - Am pus Codeforces #353</li>
     <li>26.05.2016 - Am pus Codeforces #354</li>
+    <li>28.05.2016 - <a href="http://codeforces.com/group/CJYYWxOetD/contest/207367/standings/groupmates/true">Am dat al doilea examen.</a></li>
     <li>27.05.2016 - Am pus concursurile de Div2 unde Denis Mita a participat ca neoficial pentru ca e Div1.</li>
     <li>27.05.2016 - <a href="http://codeforces.com/group/CJYYWxOetD/contest/207342/standings/groupmates/true/page/1">Am dat primul examen onsite</a>. Valentin Harsan a participat cu ID-ul AkashiSeijuro.</li>
   </ul>
