Update last Codeforces

--- a/allauthdemo/templates/bases/ranking-list.html
+++ b/allauthdemo/templates/bases/ranking-list.html
@@ -12,6 +12,7 @@
     <li>28.05.2016 - <a href="http://codeforces.com/group/CJYYWxOetD/contest/207367/standings/groupmates/true">Am dat al doilea examen.</a></li>
     <li>27.05.2016 - Am pus concursurile de Div2 unde Denis Mita a participat ca neoficial pentru ca e Div1.</li>
     <li>27.05.2016 - <a href="http://codeforces.com/group/CJYYWxOetD/contest/207342/standings/groupmates/true/page/1">Am dat primul examen onsite</a>. Valentin Harsan a participat cu ID-ul AkashiSeijuro.</li>
+    <li>02.06.2016 - Am pus Codeforces #355</li>
   </ul>
   <p>Concursurile la care puteati participa. Punctajul minim pentru nota 10 e numarul de concursuri inmultit cu 3 puncte.</p>
   <ol>
@@ -27,6 +28,7 @@
     <li>Codeforces Round #352</li>
     <li>Codeforces Round #353</li>
     <li>Codeforces Round #354</li>
+    <li>Codeforces Round #355</li>
   </ol>
   <h1>Ranking</h1>
    <div class="table-responsive">
